# pal

./: .gitignore  README.md  chat.py  dockerfile  init_vdb.py  main.py
.github/workflows/: push_to_gcp.yaml  push_to_gh.yaml  test.yaml
app/: config.py  main.py  requirements.txt
app/internal/: admin.py  login.py
app/routers/: chat.py  chat_utils.py  mock_chat_utils.py
app/templates/: base.html
app/utils/: auth.py  exceptions.py  sessions.py  test_generator.py
data/: DescriptionsWiki.md  DesignToolsChallenge.md  DocumentationReplication.md  DrawingChallenge.md  InstructionalVideo.md  LLMChallengeDescriptions.md  LLMChallengeReport.md  LLMChallengeSOP.md  LearningProposal.md  LearningRetrospective.md  Portfolio.md  PresentationVideo.md  ProgressReport.md  ProjectPortfolio.md  PrototypeBrief.md  PrototypeDescription.md  RecommendationReport.md  RecordedPresentation.md  ReferenceLibrary.md  ReportAssessment.md  ResearchBrief.md  ResearchVisualBrief.md  SOPChallenge.md  SafetyPoster.md  Spring25_Syllabus.md  Syllabus2024.md  TechnicalVideo.md  TextToolsChallenge.md  Tutorial ebooklet.md  TutorialeBooklet.md  UsabilityReport.md  UserGuideAnalysis.md
infra/ecr/: ecr.tf  provider.tf  terraform.tfvars  variables.tf
llm_lib/: pyproject.toml
llm_lib/src/pal/: __init__.py  load_vdb.py  mock.py  pipeline_vdb.py  query_vdb.py  simple.py
requirements/: base.txt
src/llm/: simple.py
templates/: base.html
templates/fragments/: chat_websocket.html  chat_ws_component.html  footer.html  header.html  navbar.html
templates/responses/: chat.html  chat_history.html  (+4 more)
(+28 files in other folders)
