[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pal"
version = "0.0.1"
description = "logic for RAG on classroom docs"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "pandas",
    "llama-index",
    "openai"
]

[project.optional-dependencies]
dev =  [
"black",
"pytest",
"jupyterlab"
]